# OpenCVOpenGLAssessment

./: README.md  TODO.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencvopenglassessment/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gl/: OpenGLRenderer.kt
web/: index.html  script.ts  tsconfig.json
